# study_graph

./: README.md  pyproject.toml
データの繋がりを活かす技術/: README.md
データの繋がりを活かす技術/chap2/: networkx_tutorial.ipynb  pytorch_geometric_tutorial.ipynb
